--- a/P1/src/application.html
+++ b/P1/src/application.html
@@ -26,104 +26,103 @@
     <section id="application">
 
         <form action="https://postman-echo.com/post" class="form">
-            <div class="flex text-4xl justify-center p-3" style="color: red;">
-                Adoption Application, Contract and Waiver
-            </div>
             <div class="bg-gray-100 border border-gray-200 p-1 rounded-lg">
+                <div class="flex text-4xl justify-center p-3 mb-3" style="color: red;">
+                    Application in Review
+                </div>
                 <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
                     <label for="pet_name" class="mt-1 p-2 block font-bold text-gray-700">Name of Pet You Wish to
                         Adopt:<span class="text-red-500">*</span></label>
                     <div class="mb-4">
-                        <input type="pet_name" id="pet_name" name="pet_name" class="mt-1 p-2 w-full border rounded-md"
-                            placeholder="Pet Name" required>
+                        <input type="text" id="pet_name" name="pet_name" class="mt-1 p-2 w-full border rounded-md"
+                            value="DunDun" readonly>
                     </div>
-
 
                     <label for="owner_name" class="mt-1 p-2 block font-bold text-gray-700">Your Name:<span
                             class="text-red-500">*</span></label>
                     <div class="mb-4">
-                        <input type="owner_name" id="owner_name" name="owner_name"
-                            class="mt-1 p-2 w-full border rounded-md" placeholder="Full Name" required>
+                        <input type="text" id="owner_name" name="owner_name" class="mt-1 p-2 w-full border rounded-md"
+                            value="John White" readonly>
                     </div>
-
 
                     <label for="phone_number" class="mt-1 p-2 block font-bold text-gray-700">Phone Number:<span
                             class="text-red-500">*</span></label>
                     <div class="mb-4">
                         <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                            <input type="area_code" id="area_code" name="area_code"
-                                class="mt-1 p-2 w-full border rounded-md" placeholder="Area Code" required>
-                            <input type="phone_number" id="phone_number" name="phone_number"
-                                class="mt-1 p-2 w-full border rounded-md" placeholder="Phone Number" required>
+                            <input type="text" id="area_code" name="area_code" class="mt-1 p-2 w-full border rounded-md"
+                                value="667" readonly>
+                            <input type="text" id="phone_number" name="phone_number"
+                                class="mt-1 p-2 w-full border rounded-md" value="1234567" readonly>
                         </div>
                     </div>
-
 
                     <label for="email" class="mt-1 p-2 block font-bold text-gray-700">Email:<span
                             class="text-red-500">*</span></label>
                     <div class="mb-4">
-                        <input type="email" id="email" name="email" class="mt-1 p-2 w-full border rounded-md"
-                            placeholder="myname@example.com" required>
+                        <input type="text" id="email" name="email" class="mt-1 p-2 w-full border rounded-md"
+                            value="csc309@gmail.com" readonly>
                     </div>
 
                     <label for="address" class="mt-1 p-2 block font-bold text-gray-700">Address:<span
                             class="text-red-500">*</span></label>
                     <div class="mb-4">
                         <div class="grid-cols-1 sm:grid md:grid-cols-1">
-                            <input type="street address" id="street_address1" name="street_address1"
-                                class="mb-4 p-2 w-full border rounded-md" placeholder="Street Address" required>
-                            <input type="street address line 2" id="street_address2" name="street_address2"
-                                class="mb-4 p-2 w-full border rounded-md" placeholder="Street Address Line 2" required>
+                            <input type="text" id="street_address1" name="street_address1"
+                                class="mb-4 p-2 w-full border rounded-md" value="1000 Bay Street" readonly>
+                            <input type="text" id="street_address2" name="street_address2"
+                                class="mb-4 p-2 w-full border rounded-md" value="" readonly>
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                <input type="city" id="city" name="city" class="mb-3 p-2 w-full border rounded-md"
-                                    placeholder="City" required>
-                                <input type="Province" id="Province" name="Province"
-                                    class="mb-4 p-2 w-full border rounded-md" placeholder="Province" required>
+                                <input type="text" id="city" name="city" class="mb-3 p-2 w-full border rounded-md"
+                                    value="Toronto" readonly>
+                                <input type="text" id="Province" name="Province"
+                                    class="mb-4 p-2 w-full border rounded-md" value="Ontario" readonly>
                             </div>
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                <input type="postal_code" id="postal_code" name="postal_code"
-                                    class="mb-4 p-2 w-full border rounded-md" placeholder="Postal Code" required>
-                                <select id="country" class="mb-4 p-2 w-full border rounded-md">
+                                <input type="text" id="postal_code" name="postal_code"
+                                    class="mb-4 p-2 w-full border rounded-md" value="M5S 3A8" readonly>
+                                <select id="country" class="mb-4 p-2 w-full border rounded-md" disabled>
                                     <option value="select">Country</option>
-                                    <option value="country1">Canada</option>
+                                    <option value="country1" selected>Canada</option>
                                     <option value="country2">United States of America</option>
                                 </select>
                             </div>
                         </div>
                     </div>
 
-
                     <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own any pets?<span
                             class="text-red-500">*</span></label>
                     <div class="mb-4">
                         <div class="text-center mb-4">
                             <label class="block mb-2">
-                                <input type="radio" class="form-radio text-blue-600" name="choice" value="yes">
+                                <input type="radio" class="form-radio text-blue-600" name="choice" value="yes" disabled>
                                 <span class="ml-2">Yes</span>
                             </label>
 
                             <label class="block">
-                                <input type="radio" class="form-radio text-red-600" name="choice" value="no">
+                                <input type="radio" class="form-radio text-red-600" name="choice" value="no" disabled
+                                    checked disabled>
                                 <span class="ml-2">No</span>
                             </label>
                         </div>
                     </div>
 
+
+
                     <label for="breed" class="mt-1 p-2 block font-bold text-gray-700">If yes, name the breed
                         and age.</label>
                     <div class="mb-4">
-                        <textarea type="breed" id="breed" name="breed" class="mt-1 p-2 w-full border rounded-md"
-                            style="resize: none; height: 200px;" placeholder="Enter Your Answer Here"></textarea>
+                        <textarea type="breed" id="breed" name="breed"
+                            class="mt-1 p-2 w-full border rounded-md align-top" style="resize: none; height: 200px;"
+                            readonly>**Your Text Here**
+                        </textarea>
                     </div>
 
 
                     <label for="past_pet" class="mt-1 p-2 block font-bold text-gray-700">Have you had a pet in the past?
-                        If
-                        yes, what animal and for how long?<span class="text-red-500">*</span></label>
+                        If yes, what animal and for how long?<span class="text-red-500">*</span></label>
                     <div class="mb-4">
-                        <textarea type="past_pet" id="past_pet" name="past_pet"
-                            class="mt-1 p-2 w-full border rounded-md" style="resize: none; height: 200px;"
-                            placeholder="Enter Your Answer Here"></textarea>
+                        <textarea type="text" id="past_pet" name="past_pet" class="mt-1 p-2 w-full border rounded-md"
+                            style="resize: none; height: 200px;" readonly>Your Answer Here</textarea>
                     </div>
 
                     <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own or rent your
@@ -131,12 +130,13 @@
                     <div class="mb-10">
                         <div class="text-center mb-4">
                             <label class="block mb-2">
-                                <input type="radio" class="form-radio text-blue-600" name="choice" value="own">
+                                <input type="radio" class="form-radio text-blue-600" name="choice" value="own" checked
+                                    disabled>
                                 <span class="ml-2">Own</span>
                             </label>
 
                             <label class="block">
-                                <input type="radio" class="form-radio text-red-600" name="choice" value="rent">
+                                <input type="radio" class="form-radio text-red-600" name="choice" value="rent" disabled>
                                 <span class="ml-2">Rent</span>
                             </label>
                         </div>
@@ -145,14 +145,15 @@
                 </div>
 
                 <div class="flex justify-start mb-10">
-                    <input type="checkbox" class="form-checkbox text-indigo-600 mr-3">
+                    <input type="checkbox" class="form-checkbox text-indigo-600 mr-3" checked disabled>
                     <p class="input-left-text" required>I have read and agree to the terms and conditions.</p>
                 </div>
 
                 <div class="flex justify-start mb-20">
                     <ul>
                         <li class="font-bold">
-                            By clicking the submit button, I verify all of the above information is true and accurate.
+                            By clicking the submit button, I verify all of the above information is true and
+                            accurate.
                         </li>
                     </ul>
                 </div>
@@ -161,7 +162,7 @@
                     <label for="signature" class="block mt-1 p-2 font-bold text-gray-700 mr-4">Signature<span
                             class="text-red-500">*</span></label>
                     <input type="text" id="signature" name="signature" class="block mt-1 p-2 w-full border rounded-md"
-                        style="width: 250px;" placeholder="Signature">
+                        style="width: 250px;" value="Your Signature" readonly>
                 </div>
 
                 <div class="flex justify-center">
@@ -177,6 +178,78 @@
             </div>
         </form>
 
+    </section>
+
+    <section id="chatbox">
+        <div class="container mx-auto p-4">
+            <div class="bg-gray-200 rounded-lg p-4">
+                <div class="bg-blue-300 rounded-lg p-4 flex justify-center mb-4">
+                    <div class="flex items-center justify-center font-bold mb-4 text-3xl">
+                        John - Toronto Adoption Shelter
+                    </div>
+                </div>
+                <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
+                    <!-- Chat messages will go here -->
+
+                    <div class="flex items-start mb-4">
+                        <img src="resources/users/user_1.png" alt="User 1" class="w-10 h-10 rounded-full mr-4">
+                        <div>
+                            <p class="bg-blue-500 text-white p-2 rounded-lg max-w-xs break-words">Hello, how are
+                                you?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div></div>
+                    <div></div>
+
+                    <div class="flex items-start mb-4">
+                        <div class="ml-auto">
+                            <p class="bg-gray-300 p-2 rounded-lg max-w-xs break-words">I'm doing well.
+                            </p>
+                        </div>
+                        <img src="resources/shelter/shelter_logo.png" alt="Shelter" class="w-10 h-10 rounded-full ml-4">
+                    </div>
+
+                    <div></div>
+                    <div class="flex items-start mb-4">
+                        <div class="ml-auto">
+                            <p class="bg-gray-300 p-2 rounded-lg max-w-xs break-words">Did you have any questions?
+                            </p>
+                        </div>
+                        <img src="resources/shelter/shelter_logo.png" alt="User 2" class="w-10 h-10 rounded-full ml-4">
+                    </div>
+                    <div class="flex items-start mb-4">
+                        <img src="resources/users/user_1.png" alt="User 1" class="w-10 h-10 rounded-full mr-4">
+                        <div>
+                            <p class="bg-blue-500 text-white p-2 rounded-lg max-w-xs break-words">How long will my
+                                application take?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div></div>
+                    <div></div>
+
+                    <div class="flex items-start mb-4">
+                        <div class="ml-auto">
+                            <p class="bg-gray-300 p-2 rounded-lg max-w-xs break-words">I expect it to be processed in
+                                the next 2-3 business days. We will get back to you as soon as possible.
+                            </p>
+                        </div>
+                        <img src="resources/shelter/shelter_logo.png" alt="User 2" class="w-10 h-10 rounded-full ml-4">
+                    </div>
+
+                </div>
+                <div class="mt-4 flex">
+                    <input type="text"
+                        class="w-3/4 p-2 rounded-l-lg border border-gray-300 focus:outline-none focus:border-blue-500"
+                        placeholder="Type your message here">
+                    <button class="w-1/4 bg-blue-500 text-white p-2 rounded-r-lg">Send</button>
+                </div>
+            </div>
+
+        </div>
     </section>
 
 </body>
