--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -90,7 +90,8 @@
                     <p class="font-bold mr-4"> Location</p>
                     <p> 10 Dundas St E Suite 900, Toronto, ON </p>
                 </div>
-                <h2 class="text-2xl mt-6 mb-1">Behaviour</h2>
+                <h2 class="text-2xl mt-6 mb-1  font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                    Behaviour</h2>
                 <hr class="my-2">
 
                 <div class="flex items-center justify-center" style="justify-content: space-between;">
