--- a/P1/src/signup&login/sec_shelter_signup.html
+++ b/P1/src/signup&login/sec_shelter_signup.html
@@ -8,13 +8,13 @@
     <!-- flowbite tailwind -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Shelter-1</title>
+    <title>Sign Up - Shelter 2</title>
 </head>
 <body>
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main.html" class="flex items-center">
+            <a href="../main/main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -100,12 +100,12 @@
                         <!-- After Sign Up Button -->
                         <div class="mb-2">
                             <p class="text-sm font-medium text-gray-500">
-                                Not a Pet Shelter? <a href="../seeker_signup.html" class="font-medium text-blue-600 hover:underline">Pet Seeker Sign Up</a>
+                                Not a Pet Shelter? <a href="./seeker_signup.html" class="font-medium text-blue-600 hover:underline">Pet Seeker Sign Up</a>
                             </p>
                         </div>
                         <div>
                             <p class="text-sm font-medium text-gray-500">
-                                Already have an account? <a href="../login.html" class="font-medium text-blue-600 hover:underline">Login</a>
+                                Already have an account? <a href="./login.html" class="font-medium text-blue-600 hover:underline">Login</a>
                             </p>
                         </div>
                     </form>
